# QueryTool

./: CMakeLists.txt  README.md
QueryApp/: QueryApp.cpp  QueryApp.vcxproj  QueryApp.vcxproj.filters
QueryApp/x64/Debug/: QueryApp.exe.recipe  vc143.idb
QueryApp/x64/Debug/QueryApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QueryAppLib/: BooleanExpression.cpp  ComparisonExpression.cpp  ConstantExpression.cpp  ConstantValue.cpp  Expression.cpp  QueryAppLib.cpp  QueryAppLib.vcxproj  QueryAppLib.vcxproj.filters  SpecificValue.cpp  Value.cpp  ValueReceiver.cold  ValueReceiverJson.cpp  ValueReceiverLib.cpp  ValueVariable.cpp  packages.config  utilities.cpp
QueryAppLib/include/: BooleanExpression.h  ComparisonExpression.h  ConstantExpression.h  ConstantValue.h  Expression.h  SpecificValue.h  Value.h  ValueExpression.h  ValueReceiver.h  ValueReceiverJson.h  ValueReceiverLib.h  ValueVariable.h  pch.h  utilities.h
QueryAppLib/x64/Debug/QueryAppLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
TestQueryApp/: TestQueryApp.vcxproj  packages.config  test.cpp
TestQueryApp/x64/Debug/: TestQueryApp.exe.recipe  TestQueryApp.vcxproj.FileListAbsolute.txt
TestQueryApp/x64/Debug/TestQueryApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  TestQueryApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
